src/tests/snapshots/nyx__tests__window_opening__check_fullscreen_maximize@fsF-tmT-wfsAN-wmBU.snap
---
source: src/tests/window_opening.rs
assertion_line: 871
description: "want fullscreen: AN\nwant maximized: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized-to-edges true\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Maximized]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]
size: 1280 × 720, bounds: 1280 × 720, states: [Maximized, Activated]

unmaximize configure:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
